tests/errors/typecheck/test_tc_01_undef_var.pc
#import std.console;
int main() {
    int x = undefined_var;
}
